load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")

copy_file(
    name = "demo_dart",
    src = "demo.dart",
    out = "demo_out.dart",
)

cc_binary(
    name = "native.dll",
    srcs = ["core.cpp"],
    linkshared = True,
)

native_binary(
    name = "demo",
    src = select({
        "@bazel_tools//src/conditions:host_windows": "runner.cmd",
        "//conditions:default": "runner.sh",
    }),
    out = "runner.cmd",
    args = ["$(location :demo_dart)", "$(location :native.dll)"],
    data = [":demo_dart", ":native.dll"],
)
