load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@bazel_skylib//rules:write_file.bzl", "write_file")

cc_binary(
    name = "native.dll",
    srcs = ["core.cpp"],
    linkshared = True,
)

copy_file(
    name = "standalone_demo_dart",
    out = "standalone_demo.dart",
    src = "demo.dart",
)

write_file(
    name = "standalone_runner",
    out = "standalone_runner.cmd",
    is_executable = True,
    content = select({
        "@bazel_tools//src/conditions:host_windows":
            ["pushd %~dp0 && dart %*"],
        "//conditions:default":
            ["dart $*"]
    }),
)

native_binary(
    name = "standalone_demo",
    src = ":standalone_runner",
    out = "standalone_runner.cmd",
    args = ["$(location :standalone_demo_dart)", "$(location :native.dll)"],
    data = [":standalone_demo_dart", ":native.dll"],
)
